upgrade devread: handle log
